# webassembly-night-sample

./: README.md  docker-compose.yml
facedetect-full-wasm/: CMakeLists.txt  Dockerfile  index.html
facedetect-full-wasm/src/: main.cpp
run-by-full-wasm/: CMakeLists.txt  Dockerfile  index.html
run-by-full-wasm/src/: main.cpp
run-by-opencv-wasm/: Dockerfile  index.html  opencv_js.config.py
run-by-opencvjs/: Dockerfile  index.html
